--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,20 @@
   <version>1.0-SNAPSHOT</version>
   <name>SimpleAppAnnotation</name>
   <url>http://maven.apache.org</url>
+  
+  <build>
+  <plugins>
+	<plugin>
+		<artifactId>maven-compiler-plugin</artifactId>
+		<version>2.3.2</version>
+		<configuration>
+			<source>1.6</source>
+			<target>1.6</target>
+		</configuration>
+	</plugin>
+   </plugins>
+  </build>
+  
    <repositories>
     <repository>
       <id>JBoss repository</id>
@@ -32,7 +46,7 @@
 	</dependency>
  
 	<dependency>
-		<groupId>hibernate-commons-annotations</groupId>
+		<groupId>org.hibernate.common</groupId>
 		<artifactId>hibernate-commons-annotations</artifactId>
 		<version>4.0.2.Final</version>
 	</dependency>
