--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.hibernate.tutorial</groupId>
+  <groupId>com.hibernate</groupId>
   <artifactId>SimpleAppAnnotation</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
@@ -9,16 +9,24 @@
   <url>http://maven.apache.org</url>
   
   <build>
-  <plugins>
-	<plugin>
-		<artifactId>maven-compiler-plugin</artifactId>
-		<version>2.3.2</version>
-		<configuration>
-			<source>1.6</source>
-			<target>1.6</target>
-		</configuration>
-	</plugin>
-   </plugins>
+    <plugins>
+	    <plugin>
+		    <artifactId>maven-compiler-plugin</artifactId>
+		    <version>2.3.2</version>
+		    <configuration>
+			    <source>1.6</source>
+			    <target>1.6</target>
+		    </configuration>
+	    </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.10</version>
+            <configuration>
+                <skipTests>true</skipTests>
+            </configuration>
+        </plugin>
+    </plugins>
   </build>
   
    <repositories>
@@ -26,13 +34,16 @@
       <id>JBoss repository</id>
       <url>http://repository.jboss.com/maven2/</url>
     </repository>
+    <repository>
+      <id>Maven repository</id>
+      <url>http://mvnrepository.com</url>
+    </repository>
   </repositories>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.8.2</version>
-      <scope>test</scope>
+      <version>4.11</version>
     </dependency>
     <dependency>
     	<groupId>org.hibernate</groupId>
